fix `Maybe` with openapi
